--- a/001-020/007-CSS悬停效果之字形D/index.html
+++ b/001-020/007-CSS悬停效果之字形D/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium ex harum sequi enim a laboriosam eveniet expedita voluptate omnis corrupti voluptatem quidem quo repellat aut magni facere dolorum, non adipisci.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Praesentium ex harum sequi enim a laboriosam eveniet expedita
+      voluptate omnis corrupti voluptatem quidem quo repellat aut
+      magni facere dolorum, non adipisci.</p>
   </div>
 </body>
 </html>
